--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <div id="results-div">
+        <p>Welcome to Rock Paper Scissors! Click on a button below to start playing</p>
+        <div id="current-round"></div>
+        
+    </div>
+    <div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 
+</body>
+<script type="text/javascript" src="script.js"></script>
 </html>
